[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Grid.gd" type="Script" id=1]
[ext_resource path="res://sprites/Background/Background.png" type="Texture" id=2]

[node name="Game" type="Node2D"]

[node name="Grid" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="Grid"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="TimeLabel" type="Label" parent="Grid"]
margin_left = 51.551
margin_top = 38.6633
margin_right = 91.551
margin_bottom = 52.6633

[node name="FlipBackTime" type="Timer" parent="Grid"]
one_shot = true

[node name="GameTime" type="Timer" parent="Grid"]

[node name="CardKeeper" type="Node2D" parent="Grid"]
[connection signal="timeout" from="Grid/FlipBackTime" to="Grid" method="_on_FlipBackTime_timeout"]
[connection signal="timeout" from="Grid/GameTime" to="Grid" method="_on_GameTime_timeout"]
